# RD_Discovery

./: CMakeLists.txt  README.md  definitions.cuh  reaction_diffusion.cu  todo
include/: async_pattern_detector.h  cuda_kernels.cuh  debug_tools.h  definitions.cuh  particle.h  particle_swarm_mode.h  pattern_detection.cuh  pattern_quadtree.h  pattern_viewer_state.h  realtime_mode.h  realtime_simulation.cuh  rendering.h  sim_types.h  thread_safe_queue.h  tuning_parameters.h  utilities.h
src/: async_pattern_detector.cpp  cuda_kernels.cu  debug_tools.cpp  main.cu  particle.cpp  particle_swarm_mode.cpp  pattern_detection.cu  pattern_quadtree.cpp  realtime_mode.cpp  realtime_simulation.cu  rendering.cpp  utilities.cpp
